--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,28 @@
-name: Run Tests
+name: Node.js CI
 
 on:
   push:
-    branches:
-      - "main"
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
-  tests:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup node
-        uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: "20"
 
       - name: Install dependencies
-        working-directory: "./strajk-bowling"
         run: npm install
+        working-directory: ./BOWLINGTEST # Ensure this path is correct
 
       - name: Run tests
-        working-directory: "./strajk-bowling"
         run: npm test
+        working-directory: ./BOWLINGTEST # Ensure this path is correct
