--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Print working directory
+        run: pwd
+
+      - name: List directory contents
+        run: ls -la
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
