--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.3.0",
+    "jsdom": "^24.1.0",
     "vite": "^4.1.0",
     "vitest": "^1.6.0"
   }
