--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,60 @@
-name: Node.js CI
+# name: Node.js CI
+
+# on:
+#   push:
+#     branches: ["main"]
+#   pull_request:
+#     branches: ["main"]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+
+#       - name: Print working directory
+#         run: pwd
+
+#       - name: List directory contents
+#         run: ls -la
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: "20"
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Run tests
+#         run: npm test
+
+name: Run tests
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    branches:
+      
+'main'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      
+uses: actions/checkout@v2
 
-      - name: Print working directory
-        run: pwd
+      
+name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16' 
+name: Install dependencies
+run: npm install
 
-      - name: List directory contents
-        run: ls -la
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+      
+name: Run tests
+      run: npm run test
