--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,25 +36,22 @@ name: Run tests
 on:
   push:
     branches:
-      
-     - 'main'
+      - "main"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      
-uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      
-name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16' 
-name: Install dependencies
-run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
 
-      
-name: Run tests
-      run: npm run test
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm run test
