--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "dependencies": {
     "msw": "^2.3.0",
     "nanoid": "^4.0.2",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.58.3"
   },
   "devDependencies": {
+    "@mswjs/interceptors": "^0.29.1",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.3.0",
     "jsdom": "^24.1.0",
+    "node-fetch": "^3.3.2",
     "vite": "^4.1.0",
     "vitest": "^1.6.0"
   }
