--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "cross-fetch": "^4.0.0",
     "msw": "^2.3.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
